# OS-repo

Colloks/1/: Общие вопросы.docx
Colloks/2/: main.py
lab1/: CMakeLists.txt
lab1/Creator/: Creator.cpp  Creator.vcxproj
lab1/Main/: 1  2  Main.cpp  Main.vcxproj  Main.vcxproj.filters  fdds  in  in.txt  ogfd  out  out.txt
lab1/Reporter/: Reporter.cpp  Reporter.vcxproj  Reporter.vcxproj.filters  employeeReport.h
lab1/Test/: Test.vcxproj  tests.cpp
lab2/: CMakeLists.txt
lab2/lab2/: lab2.cpp  lab2.h  lab2.vcxproj  lab2.vcxproj.filters
lab2/test/: test.vcxproj  tests.cpp
lab3/: Makefile  array_manager.cpp  array_manager.h  lab3.vcxproj  lab3.vcxproj.filters  main.cpp  marker_thread.cpp  marker_thread.h  unit_tests.cpp
lab4/: CMakeLists.txt
lab4/Receiver/: Receiver.cpp
lab4/Receiver14/: Receiver.cpp
lab4/Sender/: Sender.cpp
lab4/Sender14/: Sender.cpp
lab4/Tests/: tests.cpp
lab4/data/: structs.h
lab5/: CMakeLists.txt
lab5/Client/: Client14.cpp
lab5/Server/: Seeerver.cpp
lab5/Tests/: tests.cpp
lab5/data/: structs.h
lab5/lab5/: lab5.cpp  lab5.h
